--- a/dashboard.html
+++ b/dashboard.html
@@ -75,7 +75,7 @@
 <body>
     <header>
         <div id="inicjaly">
-                        <p id="inicjaly-p">KJ</p>
+                        <p id="inicjaly-p">MS</p>
         </div>
         <div id="dzwonek">
             <img src="https://powderblue-cat-511351.hostingersite.com/dowod_files/dzwonek_dot.svg" alt="kropka" id="kropka">
