--- a/dowodnowy.html
+++ b/dowodnowy.html
@@ -90,7 +90,7 @@
     <script src="timenew.js"></script>
     <main>
         <section id="lew">
-            <img src="https://i.imgur.com/T0QoXHA.png" class="object-contain w-full rounded-lg photo" style="margin: 0;" alt="Brak Zdjęcia">
+            <img src="https://i.imgur.com/CHXEc9i.png" class="object-contain w-full rounded-lg photo" style="margin: 0;" alt="Brak Zdjęcia">
             <div id="gradient"></div>
             <img src="https://i.imgur.com/2BR6mgG.gif" alt="flaga" id="flaga" style="margin: 0;">
             <div id="rzecz">
@@ -99,15 +99,15 @@
             </div>
         </section>
         <section id="praw">
-            <p>ROBERT</p>
+            <p>MARCIN</p>
             <p class="sub">Imię (Imiona)</p><br>
-            <p>LEWANDOWSKI</p>
+            <p>SZCZEPANIAK</p>
             <p class="sub">Nazwiskо</p><br>
             <p>POLSKIE</p>
             <p class="sub">Obywatelstwo</p><br>
             <p>13.02.2007</p>
             <p class="sub">Data urodzenia</p><br>
-            <p>07213208763</p>
+            <p>07221312358p>
             <p class="sub">Numer PЕSEL</p><br>
         </section>
     </main>
