--- a/dowodnowy.html
+++ b/dowodnowy.html
@@ -90,7 +90,7 @@
     <script src="timenew.js"></script>
     <main>
         <section id="lew">
-            <img src="https://i.imgur.com/CHXEc9i.png" class="object-contain w-full rounded-lg photo" style="margin: 0;" alt="Brak Zdjęcia">
+            <img src="https://i.imgur.com/ay3zE8Z.png" class="object-contain w-full rounded-lg photo" style="margin: 0;" alt="Brak Zdjęcia">
             <div id="gradient"></div>
             <img src="https://i.imgur.com/2BR6mgG.gif" alt="flaga" id="flaga" style="margin: 0;">
             <div id="rzecz">
